add: /verify route for vaildation
