# backend/src/routes/authRoutes.ts
@@ -1,5 +1,10 @@
 import { Router } from "express";
-import { register, login, getProfile } from "../controllers/authController";
+import {
+  register,
+  login,
+  getProfile,
+  verifyToken,
+} from "../controllers/authController";
 import { authenticate } from "../middlewares/auth";
 
 const router = Router();
@@ -7,6 +12,8 @@ const router = Router();
 router.post("/register", register);
 
 router.post("/login", login);
+
+router.get("/verify", authenticate, verifyToken);
 
 router.get("/profile", authenticate, getProfile);
 
